# report-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  ISSUES_FOUND.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ai-code-quality.yml  ci.yml
docs/: API_REFERENCE.md  MCP_SERVER.md  RUNBOOK.md  api.md  getting-started.md  index.md
examples/: README.md  basic_report.py  multi_source_report.py
mcp_server/: __init__.py  claude_desktop_config.json  server.py
src/report_generator/: __init__.py
src/report_generator/api/: __init__.py
src/report_generator/cli/: __init__.py  main.py
src/report_generator/core/: __init__.py  config.py  engine.py
src/report_generator/datasources/: __init__.py  api.py  base.py  database.py  file.py
src/report_generator/delivery/: __init__.py
src/report_generator/processors/: __init__.py
src/report_generator/renderers/: __init__.py  template_engine.py
src/report_generator/utils/: __init__.py  config.py  exceptions.py  helpers.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_datasources.py  test_engine.py  test_template.py  test_utils.py
